fixed overflow of fox tail to tabzilla when opened

--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,7 @@ font-family: "FontAwesome" !important;
 }
 /*background: url('../img/home-bg2.jpg') repeat scroll center center / cover transparent;*/
 #tabzilla-panel{
-  z-index:3 !important;
+  z-index:200 !important;
 }
 @media(max-width: 60em){
   .landing-section:after {
